# recolect

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
recolect/: __main__.py  core.py
